--- a/css/custom.css
+++ b/css/custom.css
@@ -96,11 +96,11 @@
 	/*----*****---- << List >> ----*****----*/
 		/* Ordered list with bold numbers */
 		ol.boldNumberList {
-			margin: 0px 0px 0px 25px;
+			margin: 0px 0px 20px 25px;
 			padding:0;
 			counter-reset:item;
 		}
-		 
+
 		ol.boldNumberList > li {
 			margin:0;
 			list-style-type:none;
@@ -108,6 +108,27 @@
 		}
 		 
 		ol.boldNumberList > li:before {
+			display:inline-block;
+			width:1.5em;
+			padding-right:0.5em;
+			font-weight:bold;
+			text-align:right;
+			content:counter(item) ".";
+		}
+
+		ol.boldNumberList_small {
+			margin: 0px 0px 20px 0px;
+			padding:0;
+			counter-reset:item;
+		}
+		ol.boldNumberList_small > li {
+			margin:0;
+			list-style-type:none;
+			counter-increment:item;
+			padding-bottom: 5px;
+		}
+		 
+		ol.boldNumberList_small > li:before {
 			display:inline-block;
 			width:1.5em;
 			padding-right:0.5em;
